G55-39 Updated frontend page

--- a/ui2/src/app/component/tarefa/sequencia-tarefas/sequencia-tarefas.component.html
+++ b/ui2/src/app/component/tarefa/sequencia-tarefas/sequencia-tarefas.component.html
@@ -7,7 +7,7 @@
   <div class="box">
     <div>
       <button (click)="listSequencia()">Gerar plano de tarefas aprovadas</button>
-      <button (click)="goBack()">Back</button>
+      <button (click)="goBack()">Retroceder</button>
     </div>
   </div>
 </body>
